[tool.poetry]
name = "object-tracking"
version = "0.1.0"
description = ""
authors = ["Vinicius José <vinijosenog@hotmail.com>"]
readme = "README.md"
packages = [{include = "object_tracking"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
